Bug 72666 - Can't enter pin --> Connecting from iOS/Android remote won't work
Summary: Can't enter pin --> Connecting from iOS/Android remote won't work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta2
Hardware: Other All
: medium normal
Assignee: Siqi LIU
URL:
Whiteboard: target:4.3.0 target:4.2.0.2
Keywords: possibleRegression
: 72577 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-12-13 07:46 UTC by Florian Reisinger
Modified: 2015-12-15 22:11 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
The arrow points to the area, where the input field should be (There is a picture in the app) (9.58 KB, image/png)
2013-12-13 07:46 UTC, Florian Reisinger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Florian Reisinger 2013-12-13 07:46:05 UTC
Created attachment 90701 [details]
The arrow points to the area, where the input field should be (There is a picture in the app)

Hi,

Try to connect with Impress remote for iOS. With 4.2 I can't enter the pin. I am on Windows.
Comment 1 Florian Reisinger 2013-12-14 15:40:34 UTC
Hi Siqi,

Could you pls check??
Comment 2 Siqi LIU 2013-12-14 17:06:00 UTC
Hmm.. That's strange, never seen that before. 

Is it specific to the ios app? Or is it specific to windows? 

How did you reproduce this scenario? 

Thanks for reporting!
Comment 3 Florian Reisinger 2013-12-14 22:46:07 UTC
Only tested with Windows.
1) open Impress
2) open iOS app
3) connect in the app -> code is displayed (over Wlan)
4) returning to impress
5) open "connect with app" (or similar)
Resulting in this behavior.
Tested on a Win 7 x64
Comment 4 Robinson Tryon (qubit) 2013-12-18 10:09:44 UTC
Florian - Let's indicate a previous version on which this works so we can tag as 'regression'.

Also: Foss wants to test this, but doesn't know where to get it. The wiki says it's in the iOS App Store[1], but we can't find it. Link, please?

[1] https://wiki.documentfoundation.org/Development/Impress/Remote
Comment 5 Siqi LIU 2013-12-18 11:30:09 UTC
Hi Florian, Qubit, 

The app is not on the App Store yet since we would like to release it at the same time when the public release of LibreOffice has the server end code integrated. As far as I know, it is not fully supported yet in the 4.1.3 version. I'm testing 4.2.0 pre-release now. 

In order to beta-test the app, please send me an email with your iOS device's UDID. Instructions to obtain the app and the UDID can be found here: 

http://siqi43.wordpress.com/2013/07/31/call-of-beta-testers-for-ios-impress-remote-control/

http://siqi43.wordpress.com/2013/07/15/how-to-find-your-idevices-udid/

I will send you an email with the installation instructions. Please test it with the latest build from master of LibO.


@Florian, I would like to test it but for now I'm struggling to have a master build on windows and the school workload is pretty heavy as well... I will take a look into it next week during the christmas vacation and I will get back to you then. 

Siqi
Comment 6 Siqi LIU 2013-12-18 11:35:52 UTC
Hello, 

I can confirm it now...it doesn't show up in the mac osx 4.2.0 pre-release build either! Although I'm sure that it worked fine in a previous version. 

I will check into that next week and get back to you then. 

However, the good news is that the server end code seems to be ready so I can release the app soon on the App store at the same time with 4.2.0. 

ATB,
Siqi
Comment 7 Florian Reisinger 2013-12-18 11:57:38 UTC
Hi,

I am also quite sure, that it worked (Screenshot is in the app).
Just an idea: (Although an unpleasant one): Delay the app for 4.3 and ask for PIN, when clicking connect in its own form....
Why?
a) Everyone is going to test with 4.2.0 and won't be able to achieve this
b) This request is invalid, if you fix it before release....

Thanks for looking into it during Christmas :D
Bug has been conformed --> NEW
Comment 8 Siqi LIU 2013-12-18 12:07:07 UTC
This also affects
Comment 9 Michael Meeks 2013-12-21 15:13:32 UTC
Andrzej - any ideas ? :-)
Comment 10 Siqi LIU 2013-12-21 15:21:17 UTC
I guess it's due to conversion to .ui, in the commit 6abfb890. 

However, the only difference seems to be m_aPinBox( this, 0 ), instead of m_aPinBox( this, SdResId( INPUT_PIN ) )  on sd/source/ui/dlg/RemoteDialogClientBox.cxx:79.

@Caolan: any helps? :P
Comment 11 Commit Notification 2014-01-03 23:10:49 UTC
Siqi LIU committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d6fdb0b4666fa92c937593a704ef40348803ff62

fdo#72666 fix for brocken NumericBox constructor



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2014-01-04 00:13:57 UTC
There never was a INPUT_PIN resource defined, so that m_aPinBox tried to load something that didn't exist so it was sort of into indefined land. I reckon changing NumericBox::NumericBox to show by default unless HIDE is specific is a good fix. Consistent with everything else. One could just try calling m_aPinBox.Show() e.g. right after m_aPinBox.SetUseThousandSep in sd/source/ui/dlg/RemoteDialogClientBox.cxx for the 4-2 branch
Comment 13 Caolán McNamara 2014-01-04 00:17:28 UTC
Does https://gerrit.libreoffice.org/#/c/7268/ work for this specific case in 4-2 ? If so we could do that local change for 4-2 and leave this more global fix for master,
Comment 14 Siqi LIU 2014-01-04 08:21:40 UTC
Hi Caolan,

Yep, I've just tested that fix and it works. Also, this should be a safer way for 4-2 as well. 

I've ”git grep" before making that global change though, and as far as I know RemoteControlDialog is the only one that makes use of NumericBox::NumericBox( Window* pParent, WinBits nWinStyle ). Thus, the change shouldn't have affected other parts of the code. 

So your fix is already in the 4-2 branch? Anything else I need to do to push it to the 4-2 release? 

Siqi
Comment 15 Commit Notification 2014-01-04 08:25:05 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f1227707e3c17ead24f00f5c2274a155c5926152&h=libreoffice-4-2

Resolves: fdo#72666 safe fix for 4-2


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Andrzej Hunt 2014-02-01 15:12:35 UTC
*** Bug 72577 has been marked as a duplicate of this bug. ***
Comment 17 Robinson Tryon (qubit) 2015-12-15 22:11:59 UTC
Migrating Whiteboard tags to Keywords: (PossibleRegression)
[NinjaEdit]