fdo#72666 fix for brocken NumericBox constructor

Change-Id: I6c9a981f8de35314edb51cc5f0fc11adfe6c1b5b